Fixed errors and tested everything